tests/transpiler/x/hs/avg_builtin.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/avg_builtin.hs:4:12: error:
    Variable not in scope: avg :: [a0] -> a1
  |
4 |     print (avg [1, 2, 3])
  |            ^^^
