tests/transpiler/x/hs/avg_builtin.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:46:21 GMT+7
main :: IO ()
main = do
    print (avg [1, 2, 3])
